--- a/css/utilities.css
+++ b/css/utilities.css
@@ -19,6 +19,14 @@
   align-items: center;
   height: 100%;
 }
+.card {
+  background-color: white;
+  color: #333;
+  border-radius: 10px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  margin: 10px;
+}
 
 /* margin */
 
