--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,8 @@ ul {
   padding-top: 50px;
   z-index: 100;
   border-radius: 10px;
-  box-shadow: 3px 1px 2px 0px rgba(0, 0, 0, 0.45);
+  /* box-shadow: 3px -5px 12px 1px rgba(15, 15, 15, 0.45); */
+  box-shadow: 3px 5px 20px 5px rgba(15, 15, 15, 0.45);
 }
 
 .intro::before,
@@ -122,6 +123,7 @@ ul {
   -moz-transform: skewY(-3deg);
   -ms-transform: skewY(-3deg);
   -o-transform: skewY(-3deg);
+  box-shadow: 0 5px 12px 1px rgba(12, 12, 12, 0.45);
 }
 .wrapper {
   display: inline-flex;
@@ -205,4 +207,37 @@ ul {
 
 .hire .about-me {
   margin-left: 50px;
+}
+/* form */
+.form {
+  position: relative;
+  background-color: #181818;
+}
+
+.form .grid {
+  overflow: visible;
+  grid-template-columns: 45% 55%;
+  gap: 30px;
+}
+.form::before,
+.form::after {
+  content: "";
+  position: absolute;
+  height: 110px;
+  bottom: 300px;
+  right: 0;
+  left: 0;
+
+  background-color: #181818;
+  transform: skewY(3deg);
+  -webkit-transform: skewY(3deg);
+  -moz-transform: skewY(3deg);
+  -ms-transform: skewY(3deg);
+  -o-transform: skewY(3deg);
+  box-shadow: 0 -5px 12px 1px rgba(15, 15, 15, 0.45);
+}
+
+.request-form {
+  position: relative;
+  z-index: 100;
 }
