--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,17 @@ body {
   color: #333;
   line-height: 1.6;
 }
+.hidden {
+  visibility: hidden;
+  height: 0;
+}
 ul {
   list-style-type: none;
 }
 .logo {
   margin-top: 15px;
 }
+/* navbar */
 .navbar {
   background-color: #181818;
   height: 90px;
@@ -208,10 +213,15 @@ ul {
 .hire .about-me {
   margin-left: 50px;
 }
+.about-me h2 {
+  color: #0554f2;
+}
 /* form */
 .form {
   position: relative;
   background-color: #181818;
+  height: 450px;
+  margin-top: 30px;
 }
 
 .form .grid {
@@ -219,11 +229,24 @@ ul {
   grid-template-columns: 45% 55%;
   gap: 30px;
 }
+.form h3 {
+  color: white;
+}
+.form a {
+  border-color: #0554f2;
+  text-decoration: none;
+  word-spacing: 5px;
+  letter-spacing: 3px;
+  margin-top: 30px;
+}
+.form a:hover {
+  background-color: #0554f2;
+}
 .form::before,
 .form::after {
   content: "";
   position: absolute;
-  height: 110px;
+  height: 210px;
   bottom: 300px;
   right: 0;
   left: 0;
@@ -236,8 +259,89 @@ ul {
   -o-transform: skewY(3deg);
   box-shadow: 0 -5px 12px 1px rgba(15, 15, 15, 0.45);
 }
+.form .form-text {
+  color: white;
+  margin-top: 20px;
+}
 
 .request-form {
   position: relative;
   z-index: 100;
+  background-color: #eff4fc;
+  height: 400px;
+  width: 400px;
+  padding: 20px;
+  justify-self: flex-end;
+
+  /*animation: slideInFromRight 1s ease-in;
+  */
+}
+.request-form .card {
+  transition: transfrom 0.5s ease-in;
+}
+.request-form:hover {
+  /*justify-self: center;
+  */
+  transform: translateX(-15px);
+  transition: 0.5s;
+  -webkit-transform: translateX(-15px);
+  -moz-transform: translateX(-15px);
+  -ms-transform: translateX(-15px);
+  -o-transform: translateX(-15px);
+}
+.request-form .form-control {
+  margin: 25px 0;
+  position: relative;
+  width: 100%;
+}
+.request-form .form-control input,
+.request-form .form-control textarea {
+  position: relative;
+  width: 100%;
+  background: #fff;
+  border: none;
+  outline: none;
+  padding: 10px 10px 7.5px;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+.request-form .form-control i {
+  position: absolute;
+  left: 0;
+  padding: 10px, 5px;
+  color: #aaa;
+  transition: 0.5s;
+  pointer-events: none;
+}
+.request-form .form-control input:focus ~ i,
+.request-form .form-control input:valid ~ i {
+  transform: translateY(-17px);
+  font-size: 0.9rem;
+  opacity: 1;
+  color: #181818;
+}
+.request-form p {
+  font-size: 12px;
+  justify-self: center;
+  padding: 0 10px;
+  margin-top: 10px;
+  opacity: 0.7;
+  text-align: center;
+}
+.request-form h3 {
+  color: #0554f2;
+  text-align: center;
+  letter-spacing: 3px;
+  word-spacing: 5px;
+}
+
+.request-form input[type="text"],
+.request-form input[type="email"],
+.request-form textarea {
+  border: 0;
+  border-bottom: 1px solid #b4becb;
+  width: 100%;
+  padding: 3px;
+  font-size: 14px;
+  opacity: 0.7;
 }
