--- a/css/utilities.css
+++ b/css/utilities.css
@@ -27,6 +27,23 @@
   padding: 20px;
   margin: 10px;
 }
+.btn {
+  display: inline-block;
+  padding: 10px 30px;
+  cursor: pointer;
+  background-color: #0554f2;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+}
+.btn:hover {
+  transform: scale(1.05);
+}
+
+.btn-outline {
+  background-color: transparent;
+  border: 1px solid #fff;
+}
 
 /* margin */
 
